--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@ $gray-darker: #a4a4a6 !default;
 $gray-dark:   #c6c6c6 !default;
 $gray:        #818286 !default;
 
-$brand-color: #b7a172 !default;
+$brand-color: #f2efe5 !default;
 
 
 //## Settings for some of the most global styles.
