--- a/css/all.css
+++ b/css/all.css
@@ -1735,3 +1735,31 @@ textarea.form__control {
 input[type="search"] {
   -webkit-appearance: none;
 }
+
+.header img {
+  background-size: cover;
+  width: 100%;
+  height: auto;
+}
+
+.header .navigation {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -244px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.header .navigation ul li {
+  display: inline-block;
+  padding-right: 29px;
+}
+
+.header .navigation ul li a {
+  text-decoration: none;
+}
+
+.header .navigation ul .logo a {
+  background: url(../images/ink-tattoo-logo.png) no-repeat;
+}
