--- a/css/all.css
+++ b/css/all.css
@@ -1746,7 +1746,7 @@ input[type="search"] {
   position: absolute;
   top: 0;
   left: 50%;
-  margin-left: -244px;
+  margin-left: -384px;
   text-transform: uppercase;
   font-size: 12px;
 }
@@ -1754,12 +1754,23 @@ input[type="search"] {
 .header .navigation ul li {
   display: inline-block;
   padding-right: 29px;
+  float: left;
 }
 
 .header .navigation ul li a {
   text-decoration: none;
 }
 
-.header .navigation ul .logo a {
+.header .navigation ul .logo {
+  width: 260px;
+  height: 137px;
   background: url(../images/ink-tattoo-logo.png) no-repeat;
+  float: left;
+  text-indent: -9999px;
+  margin: 0 53px 0 24px;
+}
+
+.header .navigation ul .logo a {
+  display: block;
+  height: 100%;
 }
