--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,20 +8,28 @@
 		position: absolute;
 		top: 0;
 		left: 50%;
-		margin-left: -244px;
+		margin-left: -384px;
 		text-transform: uppercase;
 		font-size: 12px;
 		& ul {
 			& li {
 				display: inline-block;
 				padding-right: 29px;
+				float: left;
 				& a {
 					text-decoration: none;
 				}
 			}
 			& .logo {
+				width: 260px;
+				height: 137px;
+				background: url(../images/ink-tattoo-logo.png) no-repeat;
+				float: left;
+				text-indent: -9999px;
+				margin: 0 53px 0 24px;
 				& a {
-					background: url(../images/ink-tattoo-logo.png) no-repeat;
+					display: block;
+					height: 100%;
 				}
 			}
 		}
