--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,7 +8,7 @@
 		position: absolute;
 		top: 0;
 		left: 50%;
-		margin-left: -384px;
+		margin: 27px 0 0 -384px;
 		text-transform: uppercase;
 		font-size: 12px;
 		& ul {
@@ -18,6 +18,10 @@
 				float: left;
 				& a {
 					text-decoration: none;
+					padding-bottom: 8px;
+					&:hover {
+						border-bottom: 2px #000 solid;
+					}
 				}
 			}
 			& .logo {
