--- a/css/all.css
+++ b/css/all.css
@@ -1784,7 +1784,6 @@ input[type="search"] {
   height: 100%;
 }
 
-<<<<<<< HEAD
 .promo__title {
   width: 50%;
   float: left;
@@ -1794,7 +1793,8 @@ input[type="search"] {
   background-image: url(../images/img-studio-bg.jpg);
   width: 100%;
   height: 100%;
-=======
+}
+
 .footer {
   position: relative;
   background: #aeaeae;
@@ -1803,5 +1803,4 @@ input[type="search"] {
 
 .footer .navigation {
   top: 170px;
->>>>>>> d67ca5ffc4e59614cf175c9df201fbad31094371
 }
