--- a/scss/_block.scss
+++ b/scss/_block.scss
@@ -1,14 +1,26 @@
+.wrapper-block {
+	overflow: hidden;
+}
 .promo {
 	&__title {
 		width: 50%;
 		float: left;
-		&__picture {
-			background-image: url(../images/img-studio-bg.jpg);
+		position: relative;
+		&__picture img {
 			width: 100%;
-			height: 100%;
+			height: auto;
 		}
-	}
-	&__discription {
-
+		&__discription {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin: -56px 0 0 -140px;
+			border: 10px solid #000;
+			padding: 27px 42px;
+			& h1 {
+				margin: 0;
+				font-weight: bold;
+			}
+		}
 	}
 }
