--- a/css/all.css
+++ b/css/all.css
@@ -1803,14 +1803,45 @@ input[type="search"] {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -56px 0 0 -140px;
+  margin: -50px 0 0 -150px;
   border: 10px solid #000;
-  padding: 27px 42px;
+  width: 300px;
+  height: 100px;
+  text-align: center;
 }
 
 .promo__title__discription h1 {
   margin: 0;
   font-weight: bold;
+  line-height: 80px;
+}
+
+.wrapper-command {
+  overflow: hidden;
+}
+
+.command {
+  overflow: hidden;
+  width: 100%;
+}
+
+.command .promo__title {
+  width: 33.3%;
+  float: left;
+  position: relative;
+}
+
+.command .promo__title img {
+  width: 100%;
+  height: auto;
+}
+
+.command .promo__title__article {
+  background: #ccc8b6;
+}
+
+.article__title h2 {
+  margin: 0;
 }
 
 .footer {
