--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -82,5 +82,7 @@ $form-group-margin-bottom:       15px !default;
 $cursor-disabled:                not-allowed !default;
 
 
+.uppercase {text-transform: uppercase};
 
-
+.left {float: left};
+.right {float: right};
