--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,15 @@
+.uppercase {
+  text-transform: uppercase;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -1884,4 +1896,76 @@ input[type="search"] {
 
 .footer .navigation {
   top: 170px;
+}
+
+.wrapper-gallery {
+  overflow: hidden;
+  background: #afac9c;
+}
+
+.gallery {
+  overflow: hidden;
+  width: 100%;
+}
+
+.gallery__content {
+  width: 40%;
+  float: left;
+  position: relative;
+}
+
+.gallery__picture {
+  width: 20%;
+  float: left;
+}
+
+.gallery__picture img {
+  width: 100%;
+}
+
+.wrapper-quote {
+  padding: 114px 370px 55px;
+  background: url(../images/bg-testimorial.jpg) no-repeat;
+  background-size: cover;
+}
+
+.quote {
+  width: 100%;
+  display: block;
+  font-style: italic;
+  color: #f2efe5;
+}
+
+.quote__title {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.quote__title__discription {
+  padding: 10px 100px;
+}
+
+.quote__title span {
+  font-size: 150px;
+  font-weight: normal;
+}
+
+.quote__discription p {
+  font-size: 18px;
+  text-align: right;
+  margin-top: 65px;
+}
+
+.left {
+  line-height: 0.1;
+}
+
+.right {
+  line-height: 0.8;
+}
+
+.wrapper-twitter {
+  padding: 114px 370px 124px;
+  background: url(../images/bg-twitter.jpg) no-repeat;
+  background-size: cover;
 }
