--- a/scss/_command.scss
+++ b/scss/_command.scss
@@ -42,10 +42,10 @@
 		& ul {
 			& li {
 				display: inline-block;
-				margin-right: 21px;
+				margin-right: 27px;
+				margin-bottom: 15px;
 				&.icon-facebook img {
 					width: 17px;
-
 				}
 				&.icon-twitter img {
 					width: 32px;
@@ -61,6 +61,8 @@
 				}
 				&.icon-google img {
 					width: 33px;
+				}
+				&.icon-google {
 					margin-right: 0;
 				}
 			}
@@ -72,10 +74,70 @@ a.facebook {
   text-indent: -9999px;
   width: 17px;
   height: 30px;
-  background: url(../images/icons/facebook2.svg) no-repeat;
+  background: url(../images/icons/PNG/facebook2.png) no-repeat;
   background-size: 17px 30px;
   &:hover {
-  	background: url(../images/icons/svgcolor/facebook.svg) no-repeat;
+  	background: url(../images/icons/svgcolor/facebook.png) no-repeat;
   	background-size: 17px 30px;
+  }
+}
+a.twitter {
+  display: block;
+  text-indent: -9999px;
+  width: 34px;
+  height: 30px;
+  background: url(../images/icons/PNG/Untitled-1.png) no-repeat;
+  background-size: 34px 30px;
+  &:hover {
+  	background: url(../images/icons/svgcolor/twitter.png) no-repeat;
+  	background-size: 34px 30px;
+  }
+}
+a.tumblr {
+  display: block;
+  text-indent: -9999px;
+  width: 18px;
+  height: 30px;
+  background: url(../images/icons/PNG/tumblr.png) no-repeat;
+  background-size: 18px 30px;
+  &:hover {
+  	background: url(../images/icons/svgcolor/tumblr.png) no-repeat;
+  	background-size: 18px 30px;
+  }
+}
+a.linkedin {
+  display: block;
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  background: url(../images/icons/PNG/linkedin2.png) no-repeat;
+  background-size: 30px 30px;
+  &:hover {
+  	background: url(../images/icons/svgcolor/linkedin.png) no-repeat;
+  	background-size: 30px 30px;
+  }
+}
+a.instagram {
+  display: block;
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  background: url(../images/icons/PNG/instagram2.png) no-repeat;
+  background-size: 30px 30px;
+  &:hover {
+  	background: url(../images/icons/svgcolor/instagram.png) no-repeat;
+  	background-size: 30px 30px;
+  }
+}
+a.google {
+  display: block;
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  background: url(../images/icons/PNG/google.png) no-repeat;
+  background-size: 30px 30px;
+  &:hover {
+  	background: url(../images/icons/svgcolor/google.png) no-repeat;
+  	background-size: 30px 30px;
   }
 }
